@@ -1,5 +1,12 @@
 2011-04-10  Doug Hellmann  <dhellmann@racemi.com>
 
+	* virtualenvwrapper.sh: Initialize VIRTUALENVWRAPPER_LOG_DIR and
+	VIRTUALENVWRAPPER_HOOK_DIR.
+
+	* virtualenvwrapper/hook_loader.py (main): Use
+	VIRTUALENVWRAPPER_LOG_DIR for logs instead of assuming
+	WORKON_HOME.
+
 	* virtualenvwrapper/user_scripts.py (make_hook): Change verbosity
 	of message telling the user we have created a new hook script for
 	them.
